# AIBugBench

./: .coveragerc  .gitattributes  .gitignore  .mailmap  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .ruff-tier2.toml  .safety-project.ini  .semgrepignore  .trufflehogignore  .yamllint.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXAMPLE_SUBMISSION.md  LICENSE  NOTICE  QUICKSTART.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.6.1-beta.md  SAFETY.md  SECURITY.md  TRADEMARKS.md  bandit-tier2.yaml  bandit.yaml  codecov.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_benchmark.py  setup.py  yaml_ducttape.ps1
.ci/: check_encodings.py  fix_plan.schema.json  incident.schema.json  incident.template.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md  dependabot.yml  secret-patterns.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/actions/base-python-setup/: action.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  docs.yml  pr-security.yml  scheduled-dep-refresh.yml  security-audit.yml  security.yml  tiered-validation.yml
aibugbench/: __init__.py  run_benchmark.py
aibugbench/config/: __init__.py  artifacts.py  env.py
aibugbench/io/: __init__.py  fs.py  paths.py
aibugbench/orchestration/: __init__.py  runner.py
aibugbench/util/: __init__.py  gitmeta.py  unicode_safety.py
aibugbench/validation/: __init__.py  base.py  errors.py  factory.py  schema.py
aibugbench/validation/adapters/: __init__.py  legacy_validator.py
aibugbench/validation/analyzers/: __init__.py  maintainability.py  performance.py  security.py
aibugbench/validation/analyzers/format/: __init__.py  cross_format.py  json_analyzer.py  quality_checker.py  structure_validator.py  yaml_analyzer.py
aibugbench/validation/impl/: __init__.py  prompt1.py  prompt2.py
aibugbench/validation/utils/: __init__.py  file_discovery.py  result_builder.py  scoring_factory.py
benchmark/: __init__.py  platform_validator.py  runner.py  scoring.py  secure_runner.py  types.py  typing_helpers.py  utils.py  validators.py
docs/: INTERNALS.md  ROADMAP.md  adding_models.md  api-reference.md  architecture.md  code-of-conduct.md  contributing.md  developer-guide.md  getting-started.md  index.md  interpreting_results.md  license.md  requirements.txt  sabotage-notes.md  scoring-methodology.md  scoring_rubric.md  security.md  troubleshooting.md  user-guide.md
docs/assets/javascripts/: init_mermaid.js  mermaid-panzoom.js  mermaid-panzoom.runtime.js
docs/assets/stylesheets/: extra.css  mermaid-panzoom.css  mermaid-panzoom.theme.css  mermaid-wide.css
docs/internal/: scripts-readme.md  submission-template-readme.md  submissions-readme.md  validation-readme.md
prompts/: __init__.py  ai_prompt.md  prompt_1_refactoring.md  prompt_2_yaml_json.md  prompt_3_transformation.md  prompt_4_api_simulation.md
refactor/: _tracking_pr_placeholder.md
refactor_docs/: CREATED.md
results/: latest_results.json
schemas/: manifest.schema.json
scripts/: README.md  __init__.py  automate_models.py  bootstrap_repo.py  build_backend.py  capture_prompt2_legacy_fixture.py  compare_benchmarks.py  generate_audit_summary.py  generate_manifest.py  pin_actions_to_sha.py  pre_commit_template.sh  pytest_smoke.ini  security_audit.py  smoke_pytest_wrapper.py  test_with_coverage.ps1  update_readme_toc.py  update_requirements_lock.py  validate_docs.py  validate_security.py  verify_lock_sync.py  yaml_ducttape.ps1
submissions/: README.md
submissions/example_model/: prompt_1_solution.py  prompt_2_config.json  prompt_3_transform.py  prompt_4_api_sync.py
submissions/reference_implementations/example_model/: README.md  prompt_1_solution.py  prompt_2_config_fixed.yaml  prompt_3_transform.py  prompt_4_api_sync.py
submissions/template/: README.md  prompt_1_solution.py  prompt_2_config.json  prompt_2_config_fixed.yaml  prompt_3_transform.py  prompt_4_api_sync.py
submissions/templates/template/: README.md  prompt_1_solution.py  prompt_3_transform.py  prompt_4_api_sync.py
submissions/user_submissions/: .gitignore  README.md
test_data/: config.yaml  process_records.py  user_data.json
tests/: conftest.py  test_artifact_precedence.py  test_class_structure.py  test_cli.py  test_cli_smoke.py  test_cli_snapshot.py  test_env_unit.py  test_fs_helpers.py  test_fs_unit.py  test_gitmeta_unit.py  test_imports.py  test_lock_normalize.py  test_migration_compatibility.py  test_paths.py  test_performance_regression.py  test_platform_validator_unit.py  test_reference_implementations.py  test_repo_audit_list_files.py  test_repo_audit_secrets.py  test_repo_audit_secrets_cap.py  test_repo_audit_secrets_consolidated.py  test_run_benchmark_formatting.py  test_run_benchmark_smoke.py  test_run_benchmark_unicode_discovery.py  test_run_benchmark_unicode_output_consolidated.py  test_runner.py  test_runner_contract.py  test_runner_empty.py  test_runner_orchestration_unit.py  test_runner_resilience.py  test_runner_unit.py  test_runner_writes_atomically.py  test_scoring.py  test_scoring_extended.py  test_security_isolation.py  test_setup.py  test_setup_extended.py  test_setup_import.py  test_templates.py  test_tiered_restructure.py  (+14 more)
tests/analyzers/: __init__.py
tests/analyzers/format/: __init__.py  test_cross_format.py  test_json_analyzer.py  test_quality_checker.py  test_structure_validator.py  test_yaml_analyzer.py
tests/fixtures/: .gitattributes  golden_summary.json
tests/fixtures/prompt2/: README.md  legacy_analysis.json
tests/validation/: test_factory_prompt2.py  test_file_discovery.py  test_prompt2_contract.py  test_prompt2_golden.py  test_result_builder.py  test_scoring_factory.py
validation/: README.md  __init__.py  docs_core.py  repo_audit_enhanced.py  security_core.py
